# Web-Personal-Assistant

./: .env.example  .gitignore  pyproject.toml
assistant/: settings.py  urls.py
s3_storage/: forms.py  models.py  urls.py  views.py
s3_storage/migrations/: 0001_initial.py
s3_storage/templates/s3_storage/: base.html
