[tool.poetry]
name = "web-personal-assistant"
version = "0.1.0"
description = ""
authors = ["Vitalii Bielimov <vbit2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
setuptools = "^69.5.1"
django-environ = "^0.11.2"
boto3 = "^1.34.88"
django-storages = "^1.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
